--- a/Neural_Networks.ipynb
+++ b/Neural_Networks.ipynb
@@ -189,8 +189,8 @@
     "    return W_ji,W_kj\n",
     "sigma = 1\n",
     "\n",
-    "V= np.random.normal(0,sigma,(3,2))\n",
-    "W = np.random.normal(0,sigma,(1,4))\n",
+    "W_ji= np.random.normal(0,sigma,(3,2))\n",
+    "W_kj = np.random.normal(0,sigma,(1,4))\n",
     "x = np.column_stack([np.ones(50),np.linspace(-1,1,50)])\n",
     "\n",
     "y1 = x[:,1]**2\n",
