--- a/NN for classification.ipynb
+++ b/NN for classification.ipynb
@@ -263,6 +263,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at 6.5.4 in \"Deep learning\" book"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
