--- a/NN for classification.ipynb
+++ b/NN for classification.ipynb
@@ -225,6 +225,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "BRUG SOFTMAX\n",
+    "\n",
+    "IMPORT SIGMOID FRA SCIPY\n",
+    "\n",
+    "BRUG TANH til activation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Plotting t from test-data and the predicted t from the neural network together with x_1 in the x-axis"
    ]
   },
