--- a/NN softmax on signal.ipynb
+++ b/NN softmax on signal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 999,
+   "execution_count": 930,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.special import expit, logit, softmax\n",
     "\n",
-    "L = 20\n",
+    "L = 200\n",
     "sigma = 0.2\n",
     "eta = 0.09\n",
     "\n",
@@ -46,33 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1000,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(len(x[0,:])):\n",
-    "#     x_i = x[i].reshape((1,2))\n",
-    "\n",
-    "#     aj = (W_ji @ x_i[0])\n",
-    "    \n",
-    "#     zj = expit(-aj)\n",
-    "#     yk = W_kj@zj\n",
-    "#     t_calc = softmax(yk)\n",
-    "\n",
-    "#     dk = t_calc - t[i]\n",
-    "\n",
-    "#     # dj = (der_sigmoid(zj)*W_kj*dk.T)\n",
-    "\n",
-    "#     # W_ji = W_ji - eta*dj.T@x_i.T\n",
-    "#     # W_kj = W_kj - eta*dk*zj        \n",
-    "#     dj = (np.dot(W_kj.T,dk)*der_sigmoid(zj))[1:]\n",
-    "#     W_ji = W_ji - eta*dj@x_i.T\n",
-    "#     W_kj = W_kj - eta*np.dot(dk,x_i[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1001,
+   "execution_count": 931,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,19 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1002,
+   "execution_count": 932,
    "metadata": {},
    "outputs": [],
    "source": [
+    "W_ji= np.random.rand(3,2)\n",
+    "W_kj = np.random.rand(4,3)\n",
+    "np.ones(len(train_dataset[0,:]))\n",
+    "x = np.c_[np.ones(len(train_dataset[:,0])),train_dataset[:,0].T].T\n",
+    "\n",
     "for _ in range(1000):\n",
     "    # forward\n",
     "    aj = np.dot(W_ji,x)\n",
-    "    zj = expit(-aj)\n",
+    "    zj = expit(aj)\n",
     "    yk = np.dot(W_kj,zj)\n",
     "    t_calc = softmax(yk,0)\n",
     "\n",
     "    # backward\n",
-    "    dk = t_calc[:,:] - train_dataset[:,1:].T\n",
+    "    dk = t_calc - train_dataset[:,1:].T\n",
     "    dj = der_sigmoid(zj)*np.dot(W_kj.T,dk)\n",
     "    W_ji = W_ji - eta*np.dot(dj,x.T)\n",
     "    W_kj = W_kj - eta*np.dot(dk,zj.T)\n"
@@ -106,18 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1003,
+   "execution_count": 933,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.28641419 0.23935345 0.1848779  0.28935446]\n",
-      "[0 0 0 1]\n",
-      "-0.006299298214420649\n",
-      "3\n",
-      "3\n"
+      "[6.82534380e-04 9.99317465e-01 3.53143718e-10 1.59672165e-11]\n",
+      "[1 0 0 0]\n",
+      "5.670184859010072\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
@@ -130,30 +109,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 230,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Der er noget galt med at inputtet bestemmer om den siger det er 0100 ved 3 og -3 og  [0.25,0.25,0.25,0.25] ved 1 og -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 698,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Morten\\AppData\\Local\\Temp\\ipykernel_17840\\3924924127.py:6: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1 / (1 + np.exp(-x))\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing\n",
-    "x = np.vstack((np.ones(len(test_dataset[:,0])),test_dataset[:,1].T))\n",
+    "x = np.vstack((np.ones(len(test_dataset[:,0])),test_dataset[:,0].T))\n",
     "aj = np.dot(W_ji,x)\n",
-    "zj = expit(-aj)\n",
     "yk = np.dot(W_kj,zj)\n",
     "t_calc = softmax(yk,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of classification errors with logistic regression is: 1 out of 1 \n",
-      "which is 100.0%\n"
+      "The number of classification errors with logistic regression is: 7 out of 39 \n",
+      "which is 17.94871794871795%\n"
      ]
     }
    ],
